Summary of changes between versions 3.3 and 3.4
-----------------------------------------------
- I/O keeps running at full speed if a LUN is added or removed and also if
  a device is added or removed.
- Added support for asynchronous zero-copy file I/O. This change improves
  vdisk_fileio performance significantly. See also the documentation of the
  'async' and 'o_direct' attributes.
- Added support for the SCSI WRITE AND VERIFY command.
- Reworked the build infrastructure such that switching between debug, release
  and perf modes is now much faster.
- Dropped support for RHEL 5.
- Dropped support for procfs.
- Dropped support for I/O context sharing. This mechanism improved CFQ
  performance.
- Fixed a number of small bugs.

Summary of changes between versions 3.2 and 3.3
-----------------------------------------------
- Support for a new build method ("make dpkg").
- Support for the latest kernels has been added, up to and including
  Linux kernel v4.19.
- A much more powerful latency measurement infrastructure has been added.
- Support for asynchronous buffered and direct I/O has been added to scst_vdisk.
- H.A. support has been improved.
- SCSI pass-through support is now compatible with Linux kernel versions 4.11
  and later.
- ACA support has been added.
- The scst_user driver is now compatible with usercopy hardening.
- "make install" is now compatible with SELinux.

Summary of changes between versions 3.1 and 3.2
-----------------------------------------------
- Updated SCST to SPC-4.
- Added the CONFIG_SCST_FORWARD_MODE_PASS_THROUGH mode.
- Added support for command polling. See also the poll_us attribute.
- ib_srpt: Added link_layer and port_id sysfs attributes.
- ib_srpt: Reduced CPU load caused by stopping a large number of sessions.
- isert: Fixed multiple bugs.
- scstadmin gained support for saving and restoring copy manager attributes.
- scstadmin -attributes behavior for multiple attributes has been fixed.